# k8s-arsenal

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test-pod.yaml
docs/: best-practices.md  examples.md  troubleshooting.md
docs/scenarios/: scenario-c-supply-chain.md
docs/spec/: edge-semantics-spec.md
k8s_arsenal/: __init__.py  cli.py  models.py
k8s_arsenal/advanced/: __init__.py  vectors.py
k8s_arsenal/cloud/: __init__.py  alibaba.py  aws.py  azure.py  base.py  gcp.py
k8s_arsenal/core/: __init__.py  engine.py  optimizer.py
k8s_arsenal/credential_access/: __init__.py  catalog.py
k8s_arsenal/discovery/: __init__.py  catalog.py
k8s_arsenal/escape/: __init__.py  detector.py  vectors.py
k8s_arsenal/evasion/: __init__.py  catalog.py
k8s_arsenal/exfiltration/: __init__.py  catalog.py
k8s_arsenal/impact/: __init__.py  catalog.py
k8s_arsenal/lateral/: __init__.py  movement.py
k8s_arsenal/network/: __init__.py  attacks.py
k8s_arsenal/persistence/: __init__.py  catalog.py
k8s_arsenal/playbook/: __init__.py  chains.py  executor.py  templates.py
k8s_arsenal/privilege_escalation/: __init__.py  catalog.py
k8s_arsenal/recon/: __init__.py  k8s_enum.py  rbac_adapter.py  sa_analysis.py  trust_map.py
k8s_arsenal/runtime/: __init__.py  capability_set.py  classifier.py  counterfactual.py  engine.py  evaluator.py  identity_flow.py  (+3 more)
scenario_b/: attack_chain.py  attack_phase1.py  attack_phase2.py  detector-daemonset.yaml  detector.py  detector_v2.py  falco-custom-rules.yaml  falco-daemonset.yaml  falco-rules.yaml  falco-v2.yaml  falco-v3.yaml  falco-v4.yaml  falco.yaml  gen_falco.py
scenario_c/: DESIGN.md  chain.py  setup.py  verify_cluster.py
tests/: conftest.py  test_alibaba.py  test_capability_set.py  test_catalogs.py  test_chains.py  test_classifier.py  test_counterfactual.py  test_credential_access.py  test_detector.py  test_discovery.py  test_engine.py  test_executor.py  test_exfiltration.py  test_graph.py  test_identity_flow.py  test_impact.py  test_invariants.py  test_k8s_enum.py  test_minimal_cut.py  test_models.py  test_optimizer.py  test_privilege_escalation.py  test_rbac_adapter.py  test_recon_to_runtime_contract.py  test_runtime.py  test_sa_analysis.py  test_smart_chain.py  test_trust_map.py
(+7 files in other folders)
